@@ -2958,16 +2958,8 @@ void CLASS sony_arw2_load_raw()
 	  bit += 7;
 	}
 #ifdef LIBRAW_LIBRARY_BUILD
-      if(imgdata.params.sony_arw2_hack)
-          {
-              for (i=0; i < 16; i++, col+=2)
-                  RAW(row,col) = curve[pix[i] << 1];
-          }
-      else
-          {
-              for (i=0; i < 16; i++, col+=2)
-                  RAW(row,col) = curve[pix[i] << 1] >> 2;
-          }
+      for (i=0; i < 16; i++, col+=2)
+        RAW(row,col) = curve[pix[i] << 1];
 #else
       for (i=0; i < 16; i++, col+=2)
 	RAW(row,col) = curve[pix[i] << 1] >> 2;
@@ -2982,13 +2974,6 @@ void CLASS sony_arw2_load_raw()
   }
 #endif
   free (data);
-#ifdef LIBRAW_LIBRARY_BUILD
-  if(imgdata.params.sony_arw2_hack)
-  {
-	black <<= 2;
-	maximum <<=2;
-  }
-#endif
 }
 
 void CLASS samsung_load_raw()
@@ -6741,8 +6726,8 @@ int CLASS parse_tiff_ifd (int base)
 	if (verbose) fprintf (stderr, _(" Sony matrix:\n%f %f %f\n%f %f %f\n%f %f %f\n"), cmatrix[0][0],  cmatrix[0][1], cmatrix[0][2], cmatrix[1][0], cmatrix[1][1], cmatrix[1][2], cmatrix[2][0], cmatrix[2][1], cmatrix[2][2]);
 #endif
 	break;
-    case 29456: // Sony black level, Sony_SR2SubIFD_0x7310, needs to be divided by 4
-      FORC4 cblack[c ^ c >> 1] = get2()/4;
+    case 29456: // Sony black level, Sony_SR2SubIFD_0x7310, no more needs to be divided by 4
+      FORC4 cblack[c ^ c >> 1] = get2();
       i = cblack[3];
       FORC3 if(i>cblack[c]) i = cblack[c];
       FORC4 cblack[c]-=i;
@@ -8735,15 +8720,15 @@ void CLASS adobe_coeff (const char *t_make, const char *t_model)
 	{ 8512,-2641,-694,-8042,15670,2526,-1821,2117,7414 } },
     { "Sony DSC-V3", 0, 0,
 	{ 7511,-2571,-692,-7894,15088,3060,-948,1111,8128 } },
-    { "Sony DSC-RX100M2", -200, 0,
+    { "Sony DSC-RX100M2", -800, 0,
 	{ 8651,-2754,-1057,-3464,12207,1373,-568,1398,4434 } },
-    { "Sony DSC-RX100", -200, 0,
+    { "Sony DSC-RX100", -800, 0,
 	{ 8651,-2754,-1057,-3464,12207,1373,-568,1398,4434 } },
     {"Sony DSC-RX10",0, 0,
         { 8562,-3595,-385,-2715,11089,1128,-1023,2081,4400 } },
-    { "Sony DSC-RX1R", -128, 0,
+    { "Sony DSC-RX1R", -512, 0,
         { 8195,-2800,-422,-4261,12273,1709,-1505,2400,5624 } },
-    { "Sony DSC-RX1", -128, 0,
+    { "Sony DSC-RX1", -512, 0,
 	{ 6344,-1612,-462,-4863,12477,2681,-865,1786,6899 } },
     { "Sony DSLR-A100", 0, 0xfeb,
 	{ 9437,-2811,-774,-8405,16215,2290,-710,596,7181 } },
@@ -8761,59 +8746,59 @@ void CLASS adobe_coeff (const char *t_make, const char *t_model)
 	{ 6038,-1484,-579,-9145,16746,2512,-875,746,7218 } },
     { "Sony DSLR-A390", 0, 0,
 	{ 6038,-1484,-579,-9145,16746,2512,-875,746,7218 } },
-    { "Sony DSLR-A450", -128, 0xfeb,
+    { "Sony DSLR-A450", -512, 0xfeb,
 	{ 4950,-580,-103,-5228,12542,3029,-709,1435,7371 } },
-    { "Sony DSLR-A580", -128, 0xfeb,
+    { "Sony DSLR-A580", -512, 0xfeb,
 	{ 5932,-1492,-411,-4813,12285,2856,-741,1524,6739 } },
-    { "Sony DSLR-A5", -128, 0xfeb,
+    { "Sony DSLR-A5", -512, 0xfeb,
 	{ 4950,-580,-103,-5228,12542,3029,-709,1435,7371 } },
-    { "Sony DSLR-A700", -128, 0,
+    { "Sony DSLR-A700", -512, 0,
 	{ 5775,-805,-359,-8574,16295,2391,-1943,2341,7249 } },
-    { "Sony DSLR-A850", -128, 0,
+    { "Sony DSLR-A850", -512, 0,
 	{ 5413,-1162,-365,-5665,13098,2866,-608,1179,8440 } },
-    { "Sony DSLR-A900", -128, 0,
+    { "Sony DSLR-A900", -512, 0,
 	{ 5209,-1072,-397,-8845,16120,2919,-1618,1803,8654 } },
-    {"Sony ILCE-3000",-128, 0,
+    {"Sony ILCE-3000",-512, 0,
         { 14009,-8208,729,3738,4752,2932,5743,-3800,6494 } },    
-    {"Sony ILCE-A7R",-128, 0,
+    {"Sony ILCE-A7R",-512, 0,
         { 8592,-3219,-348,-3846,12042,1475,-1079,2166,5893 } },
-    {"Sony ILCE-A7",-128, 0,
+    {"Sony ILCE-A7",-512, 0,
         { 8592,-3219,-348,-3846,12042,1475,-1079,2166,5893 } },
-    { "Sony NEX-5T", -128, 0,
+    { "Sony NEX-5T", -512, 0,
         { 7623,-2693,-347,-4060,11875,1928,-1363,2329,5752 } },
-    { "Sony NEX-5N", -128, 0,
+    { "Sony NEX-5N", -512, 0,
 	{ 5991,-1456,-455,-4764,12135,2980,-707,1425,6701 } },
-    { "Sony NEX-5R", -128, 0,
+    { "Sony NEX-5R", -512, 0,
 	{ 6129,-1545,-418,-4930,12490,2743,-977,1693,6615 } },
-    { "Sony NEX-3N", -128, 0,
+    { "Sony NEX-3N", -512, 0,
 	{ 6129,-1545,-418,-4930,12490,2743,-977,1693,6615 } },
-    { "Sony NEX-3", -128, 0,		/* Adobe */
+    { "Sony NEX-3", -512, 0,		/* Adobe */
 	{ 6549,-1550,-436,-4880,12435,2753,-854,1868,6976 } },
-    { "Sony NEX-5", -128, 0,		/* Adobe */
+    { "Sony NEX-5", -512, 0,		/* Adobe */
 	{ 6549,-1550,-436,-4880,12435,2753,-854,1868,6976 } },
-    { "Sony NEX-6", -128, 0,
+    { "Sony NEX-6", -512, 0,
 	{ 6129,-1545,-418,-4930,12490,2743,-977,1693,6615 } },
-    { "Sony NEX-7", -128, 0,
+    { "Sony NEX-7", -512, 0,
 	{ 5491,-1192,-363,-4951,12342,2948,-911,1722,7192 } },
-    { "Sony NEX", -128, 0,	/* NEX-C3, NEX-F3 */
+    { "Sony NEX", -512, 0,	/* NEX-C3, NEX-F3 */
 	{ 5991,-1456,-455,-4764,12135,2980,-707,1425,6701 } },
-    { "Sony SLT-A33", -128, 0,
+    { "Sony SLT-A33", -512, 0,
 	{ 6069,-1221,-366,-5221,12779,2734,-1024,2066,6834 } },
-    { "Sony SLT-A35", -128, 0,
+    { "Sony SLT-A35", -512, 0,
 	{ 5986,-1618,-415,-4557,11820,3120,-681,1404,6971 } },
-    { "Sony SLT-A37", -128, 0,
+    { "Sony SLT-A37", -512, 0,
 	{ 5991,-1456,-455,-4764,12135,2980,-707,1425,6701 } },
-    { "Sony SLT-A55", -128, 0,
+    { "Sony SLT-A55", -512, 0,
 	{ 5932,-1492,-411,-4813,12285,2856,-741,1524,6739 } },
-    { "Sony SLT-A57", -128, 0,
+    { "Sony SLT-A57", -512, 0,
 	{ 5991,-1456,-455,-4764,12135,2980,-707,1425,6701 } },
-    { "Sony SLT-A58", -128, 0,
+    { "Sony SLT-A58", -512, 0,
 	{ 5991,-1456,-455,-4764,12135,2980,-707,1425,6701 } },
-    { "Sony SLT-A65", -128, 0,
+    { "Sony SLT-A65", -512, 0,
 	{ 5491,-1192,-363,-4951,12342,2948,-911,1722,7192 } },
-    { "Sony SLT-A77", -128, 0,
+    { "Sony SLT-A77", -512, 0,
 	{ 5491,-1192,-363,-4951,12342,2948,-911,1722,7192 } },
-    { "Sony SLT-A99", -128, 0,
+    { "Sony SLT-A99", -512, 0,
 	{ 6344,-1612,-462,-4863,12477,2681,-865,1786,6899 } },
   };
   double cam_xyz[4][3];
@@ -10189,7 +10174,12 @@ dng_skip:
     if (raw_width  < width ) raw_width  = width;
   }
   if (!tiff_bps) tiff_bps = 12;
-  if (!maximum) maximum = (1 << tiff_bps) - 1;
+  if (!maximum)
+    {
+      maximum = (1 << tiff_bps) - 1;
+      if(maximum < 0x10000 && curve[maximum]>0)
+        maximum = curve[maximum];
+    }
   if (!load_raw || height < 22 || width < 22 ||
 	tiff_bps > 16 || tiff_samples > 4 || colors > 4)
     is_raw = 0;
