@@ -257,7 +257,6 @@ typedef struct
     int         user_qual;      /* -q */
     int         user_black;     /* -k */
     int		user_cblack[4];
-    int		sony_arw2_hack;
     int         user_sat;       /* -S */
 
     int         med_passes;     /* -m */
