@@ -24,11 +24,11 @@ it under the terms of the one of three licenses as you choose:
 #define __VERSION_H
 
 #define LIBRAW_MAJOR_VERSION  0
-#define LIBRAW_MINOR_VERSION  16
+#define LIBRAW_MINOR_VERSION  17
 #define LIBRAW_PATCH_VERSION  0
-#define LIBRAW_VERSION_TAIL   Release
+#define LIBRAW_VERSION_TAIL   PreAlpha
 
-#define LIBRAW_SHLIB_CURRENT  	10
+#define LIBRAW_SHLIB_CURRENT  	11
 #define LIBRAW_SHLIB_REVISION 	0
 #define LIBRAW_SHLIB_AGE     	0
 
